# photo_manager

./: .gitignore  =6.5  LICENSE  README.md  activate_venv.bat  install_linux.sh  install_windows.ps1  install_wsl.sh  jem_project_overview.txt  load_template.yaml  punchlist.txt  pyproject.toml  requirements.txt  setup.py  slideshow_pi.py  test_basic_functionality.py
claude_info_bkup/: project plan.txt
photo_manager/: __init__.py  __main__.py  main.py  slideshow_pi.py
photo_manager/config/: config_manager.py  default_config.py
photo_manager/core/: duplicate_detector.py  export_manager.py  file_scanner.py  image_processor.py  tag_manager.py
photo_manager/database/: database_manager.py  export_db.py  migrations.py  models.py
photo_manager/tests/: test_image_processor.py  test_tag_manager.py
photo_manager/ui/qt/: dialogs.py  export_preview.py  image_display.py  image_handler.py  keyboard_handler.py  navigation_controller.py  slideshow.py  viewer.py
photo_manager/ui/tkinter/: fade_effects.py  pi_slideshow.py
photo_manager/utils/: exif_reader.py  filename_parser.py  helpers.py
project_overview/: project plan.txt
src/photo_manager/: __init__.py  launcher.py
src/photo_manager/config/: config.py
src/photo_manager/db/: manager.py  models.py  schema.py
src/photo_manager/export/: exporter.py
src/photo_manager/hashing/: duplicates.py  hasher.py
src/photo_manager/organizer/: __init__.py  __main__.py  app.py  db_dialog.py  (+13 more)
tests/: test_config.py  test_db.py  test_export.py  test_hashing.py  test_organizer.py  test_query.py  test_scanner.py  test_viewer.py
(+17 files in other folders)
